# Sales-Perfomance-Analysis

./: .env  Makefile  PostgresToCsv.py  README.md  SuperStoreData.sql  csvTopostgres.py  data_dictionary.md  env_init.py  executive_summary. md  main.py  pyproject.toml  superstore.ipynb  user_guide.md
Data/processed/: Superstore-2025-10-03-19-48-19.csv  Superstore-2025-10-03-19-53-49.csv
reports/: technical_report.md
sql/: SuperStoreData.sql
