[project]
name = "sales-perfomance-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "matplotlib>=3.10.6",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "polars>=1.33.1",
    "psycopg2>=2.9.10",
    "scipy>=1.16.2",
    "sqlalchemy>=2.0.43",
]
